--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title></title>
         <meta name="description" content="">
-        <link href="" rel="">
+        <link href="css/styles.min.css" rel="stylesheet">
     </head> 
     <body>
+        <h1>Oh, Hai!</h1>
+        <script src="js/bundle.min.js"></script>
     </body>
 </html>
