Swap Vue for React

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
   
   <body>
-    <h1>Oh, Hai!</h1>
+    <div id="app"></div>
     <script src="js/bundle.min.js"></script>
   </body>
 </html>
