--- a/web_app/src/index.html
+++ b/web_app/src/index.html
@@ -9,7 +9,9 @@
   </head>
   
   <body>
-    <div id="app"></div>
+    <main id="app">
+      <h1>Oh Hai, HTML!</h1>
+    </main>
     <script src="js/bundle.min.js"></script>
   </body>
 </html>
